# cameo

./: .classpath  .gitignore  .project  404.html  CHANGELOG  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  CPackConfigCommon.in  ChangeLog  FindRapidjson.cmake  INSTALL.md  LICENSE  LICENSE.txt  README  README.md  TODO  TODO.md  build.sh  build_and_package.sh  configure.ac  index.html  install.sh  meson.build  pom.xml
cameo-api-cpp/: .cproject  .gitignore  CMakeLists.txt  CONTRIBUTING.md  COPYING  CPackConfig.in  ChangeLog  Doxyfile.in  INSTALL.md  Makefile.am  README.md  configure.ac
cameo-api-cpp/include/: Application.h  Context.h  EventStreamSocket.h  JSON.h  OutputStreamSocket.h  PublisherCreationException.h  PublisherSubscriber.h  RemoteException.h  RequesterCreationException.h  RequesterResponder.h  Server.h  Services.h  Strings.h  UndefinedKeyException.h  cameo.h  cameo.h.in
cameo-api-cpp/m4/: cameo.m4
cameo-api-cpp/msvc/cameo-api-cpp/: cameo-api-cpp.vcxproj
cameo-api-cpp/packaging/: CPackConfig.cmake
cameo-api-cpp/src/: Application.cpp  CMakeLists.txt  CancelEvent.h  ConnectionTimeout.cpp  EventStreamSocket.cpp  EventThread.cpp  KeyEvent.cpp  KeyEvent.h  Makefile.am  OutputStreamSocket.cpp  PublisherCreationException.cpp  PublisherSubscriber.cpp  RemoveKeyEvent.h  RemoveKeyValueEvent.h  RequesterResponder.cpp  Server.cpp  Services.cpp  SocketException.cpp  StatusEvent.h  StoreKeyValueEvent.h  Strings.cpp
cameo-api-cpp/src/base/: Application.cpp  CancelEvent.h  ConnectionChecker.cpp  Event.cpp  EventListener.cpp  EventStreamSocket.cpp  EventThread.cpp  JSON.cpp  KeyEvent.h  Message.h  Messages.cpp  Messages.h  OutputStreamSocket.cpp  PortEvent.h  RequestSocket.cpp  RequestSocket.h  Requests.cpp  Requests.h  ResultEvent.h  Server.cpp  Services.cpp  StatusEvent.h  Strings.cpp  TimeCondition.cpp  UndefinedApplicationException.cpp  Waiting.h  WaitingSet.h
cameo-api-cpp/src/cameo/: Application.cpp  Application.h  CancelEvent.cpp  CancelEvent.h  ConnectionChecker.cpp  ConnectionChecker.h  Event.cpp  EventStreamSocket.cpp  EventStreamSocket.h  EventThread.cpp  InvalidArgumentException.h  OutputStreamSocket.cpp  OutputStreamSocket.h  PortEvent.cpp  PortEvent.h  ProtoType.h  PublisherEvent.cpp  PublisherEvent.h  Serializer.cpp  Serializer.h  Server.cpp  Server.h  Services.cpp  Services.h  StatusEvent.cpp  SubscriberCreationException.cpp
cameo-api-cpp/src/coms/: PublisherCreationException.cpp  PublisherSubscriber.cpp  RequesterCreationException.cpp  RequesterResponder.cpp  ResponderCreationException.cpp
cameo-api-cpp/src/impl/: PublisherImpl.cpp  PublisherImpl.h  RequestImpl.cpp  RequestImpl.h  RequestSocketImpl.cpp  RequesterImpl.cpp  ResponderImpl.cpp  ServicesImpl.cpp  ServicesImpl.h  SubscriberImpl.h  (+1 more)
cameo-api-cpp/tests/: CMakeLists.txt  Test.h  TestApplicationIdentity.cpp  TestApplicationWithStarterIdentity.cpp  TestEndpoint.cpp  TestNameId.cpp  TestStrings.cpp
cameo-server/: CHANGELOG.md  CMakeLists.txt  DOC  pom.xml
cameo-server-jzmq/: .classpath  .project  CHANGELOG.md  CMakeLists.txt  CPackConfig.in  pom.xml
cameo-server/logo/: .gitignore  cameo-logo-name.odg
cameo-server/scripts/: cameo-server  cameo-server.in
cpp/api/: .cproject  .gitignore  .gitlab-ci.yml  .project  CHANGELOG.md  CMakeLists.txt  CPackConfig.cmake  ChangeLog  Doxyfile.in  FindRapidJSON.cmake  README.md  copyright  meson.build
cpp/proxy/: .cproject  .project  CMakeLists.txt  README.md
cpp/tests/: CMakeLists.txt
examples/cpp/: .cproject  .project  CMakeLists.txt  config.xml
java/console-jzmq/: CMakeLists.txt  CPackConfig.in  pom.xml
python/api/: .cproject  .gitignore  .gitlab-ci.yml  .gitmodules  .project  CMakeLists.txt  README.md  setup.py  test.sh
src/: Application.cpp  BadFormatException.h  CMakeLists.txt  EventStreamSocket.cpp  JSON.h  Makefile.am  OutputStreamSocket.cpp  RemoveKeyEvent.cpp  RemoveKeyValueEvent.cpp  Server.cpp  Services.cpp  StoreKeyValueEvent.cpp  StoreKeyValueEvent.h  Strings.cpp  UndefinedKeyException.cpp  UnmanagedApplicationException.cpp
src/cameo/: Application.cpp  Application.h  ConcurrentQueue.h  ConnectionChecker.cpp  ConnectionChecker.h  ConnectionTimeout.cpp  Event.cpp  Event.h  EventListener.cpp  EventStreamSocket.cpp  EventStreamSocket.h  EventThread.h  OutputStreamSocket.cpp  OutputStreamSocket.h  PortEvent.cpp  PortEvent.h  ProtoType.h  PublisherCreationException.cpp  PublisherCreationException.h  PublisherEvent.cpp  PublisherEvent.h  RemoteException.cpp  RequesterCreationException.cpp  RequesterCreationException.h  ResponderCreationException.cpp  ResponderCreationException.h  Response.cpp  Response.h  ResultEvent.cpp  ResultEvent.h  Serializer.cpp  Serializer.h  Server.cpp  Server.h  Services.cpp  Services.h  SocketException.h  StarterServerException.cpp  StarterServerException.h  StateException.cpp  (+9 more)
src/impl/: CancelIdGenerator.cpp  GenericWaitingImpl.cpp  PublisherImpl.cpp  RequestSocketImpl.h  RequesterImpl.cpp  RequesterImpl.h  ServicesImpl.cpp  ServicesImpl.h  SocketWaitingImpl.cpp  StreamSocketImpl.cpp  StreamSocketImpl.h  SubscriberImpl.cpp  SubscriberImpl.h
src/message/: Message.h
src/proto/: .gitignore  Messages.proto
src/test/: Makefile.am  Test.cpp  TestBadEndpoint.cpp  TestCancelApplication.cpp  TestConnectionCheckerApplication.cpp  TestPublisherApplication.cpp  TestPublisherLoopApplication.cpp  TestRequesterAndResponderApplication.cpp  TestResponderApplication.cpp  TestResultApplication.cpp  TestStartTimeoutApplication.cpp  TestStartWithResultApplication.cpp  TestStartWithStopApplication.cpp  TestStateApplication.cpp  TestStopApplication.cpp  TestSubscriberAndPublisherApplication.cpp  TestSubscriberApplication.cpp  TestTimeoutApplication.cpp  TestVeryFast.cpp
test/: CMakeLists.txt
tests/: CMakeLists.txt  Test.h  TestApplicationAndStarterIdentities.cpp  TestApplicationIdentity.cpp  TestApplicationWithStarterIdentity.cpp  TestEndpoint.cpp  TestName.cpp  TestNameId.cpp  run  run.cmd  run.sh
tests/cpp/: .cproject  .project  CMakeLists.txt
tests/java/: .gitignore  pom.xml  tests.xml
tests/python/: .project
(+2036 files in other folders)
